feat: automatic update

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
 
 jobs:
   build:
@@ -15,7 +15,32 @@ jobs:
         uses: ./.github/actions/bundle
       - name: Build Arch Linux packages
         uses: ./.github/actions/package
+      - name: Update PKGBUILD
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          pkgver=$(git diff PKGBUILD | sed -n -E 's/\+pkgver=//p')
+          git add PKGBUILD
+          if [ -n "$(git status --porcelain)" ]; then
+            git commit -a -m "chore: update PKGBUILD [skip ci]"
+          fi
+          if [ -z "${pkgver}" ]; then
+            echo "No changes to PKGBUILD"
+          else
+            git tag "${pkgver}"
+            git push origin "${pkgver}"
+          fi
+          sed -i -E 's!core.zip!https://github.com/${{ github.repository }}/releases/download/${pkgver}/core.zip!g' PKGBUILD
       - name: Publish
         uses: ncipollo/release-action@v1
         with:
           artifacts: '*.pkg.tar.zst,core.zip'
+      - name: Publish to AUR
+        uses: KSXGitHub/github-actions-deploy-aur@v2
+        with:
+          pkgname: moonbit-bin
+          pkgbuild: ./PKGBUILD
+          commit_username: ${{ github.repository_owner }}
+          commit_email: ${{ github.repository_owner }}@users.noreply.github.com
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          commit_message: update
