fix(ci): add tag in publish job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,30 +11,39 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v2
+
       - name: Bundle MoonBit core
         uses: ./.github/actions/bundle
+
       - name: Build Arch Linux packages
         uses: ./.github/actions/package
+
       - name: Update PKGBUILD
+        id: pkgbuild
         run: |
+          pkgver=$(git diff PKGBUILD | sed -n -E 's/\+pkgver=//p')
+          echo "TAG=v${pkgver}" >> "$GITHUB_OUTPUT"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          pkgver=$(git diff PKGBUILD | sed -n -E 's/\+pkgver=//p')
           git add PKGBUILD
           if [ -n "$(git status --porcelain)" ]; then
             git commit -a -m "chore: update PKGBUILD [skip ci]"
+            git push origin HEAD:main
           fi
           if [ -z "${pkgver}" ]; then
             echo "No changes to PKGBUILD"
           else
-            git tag "${pkgver}"
-            git push origin "${pkgver}"
+            git tag "v${pkgver}"
+            git push origin "v${pkgver}"
           fi
           sed -i -E 's!core.zip!https://github.com/${{ github.repository }}/releases/download/${pkgver}/core.zip!g' PKGBUILD
+
       - name: Publish
         uses: ncipollo/release-action@v1
         with:
           artifacts: '*.pkg.tar.zst,core.zip'
+          tag: ${{ steps.pkgbuild.outputs.TAG }}
+
       - name: Publish to AUR
         uses: KSXGitHub/github-actions-deploy-aur@v2
         with:
