--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,3 +62,6 @@ jobs:
           commit_email: ${{ github.repository_owner }}@users.noreply.github.com
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
           commit_message: update
+
+      - name: Check
+        uses: ./.github/actions/check
