fix: disable debug option

--- a/.github/actions/package/Dockerfile
+++ b/.github/actions/package/Dockerfile
@@ -2,6 +2,7 @@ FROM quay.io/archlinux/archlinux:base-devel AS base
 
 RUN useradd -d /build -U -G wheel build && \
     pacman -Syu --noconfirm git pacman-contrib sudo && \
+    pacman -Rnsu debugedit && \
     echo '%wheel ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 USER build
