--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,3 +54,4 @@ jobs:
           commit_email: ${{ github.repository_owner }}@users.noreply.github.com
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
           commit_message: update
+          allow_empty_commits: false
