--- a/.github/actions/update/Dockerfile
+++ b/.github/actions/update/Dockerfile
@@ -1,12 +1,13 @@
 FROM quay.io/archlinux/archlinux:base-devel AS base
 
-RUN useradd -d /build -U -G wheel build && \
+COPY entrypoint.sh /entrypoint.sh
+ENTRYPOINT [ "/entrypoint.sh" ]
+
+RUN chmod +x /entrypoint.sh && \
+  useradd -d /build -U -G wheel build && \
   pacman -Syu --noconfirm git pacman-contrib sudo unzip && \
   pacman -Rnsu debugedit && \
   echo '%wheel ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 USER build
 WORKDIR /build
-
-COPY entrypoint.sh /entrypoint.sh
-ENTRYPOINT [ "/entrypoint.sh" ]
